--- a/todo_signUp.css
+++ b/todo_signUp.css
@@ -1,22 +1,45 @@
 /* CSS Variables */
 :root{
     --body-background-color: #F5F6F7;
+    --body-font-family: 'Noto Sans KR', sans-serif;
 
-    --title-font-size: 1.5rem;
-    --title-font-color: #08A600;
-    --title-font-weight: 1000;
+    --title-font-size: 3rem;
+    --title-font-color: #08a600;
+    --title-font-weight: 900;
 
-    --content-font-size: 0.8rem;
+    --content-font-size: 1.3rem;
     --content-font-color: #000000;
-    --content-font-weight: 1000;
+    --content-font-weight: 900;
+
+    --input-height: 50px;
+    --input-border-color: #DADADA;
+    --input-border-width: 1px;
+    --input-padding-left-right: 14px;
+    --input-padding-up-down: 10px;
+    
+    --primary-button-size: 2rem;
+    --primary-button-font-weight: 500;
 
     --error-font-color: #FF0000;
 
     --button-background-color: #08A600;
 }
 
-body {
+:root .sel {
+    -webkit-appearance: none;
+    -moz-appearance: none; 
+    appearance: none; 
+    background: #fff url(https://static.nid.naver.com/images/join/pc/sel_arr_2x.gif) 98% 50% no-repeat;
+    background-size: 20px 8px;
+}
+
+:root .underline {
+    text-decoration: underline;
+}
+
+html {
     font-size: 10px;
+    font-family: var(--body-font-family);
     background-color: var(--body-background-color); 
 }
 
@@ -26,17 +49,31 @@ body {
     justify-content: center;
 }
 
-.main {
-    width: 40%;
+.join-content {
+    width: 30%;
     display: flex;
     flex-direction: column;
 }
 
-.main div {
+.join-content div {
     font-size: var(--content-font-size);
     font-weight: var(--content-font-weight);
     color: var(--content-font-color);
     margin: 10px 0 10px 0;
+}
+
+.join-row input, .join-content select {
+    width: 100%;
+    height: var(--input-height);
+    border-color: var(--input-border-color);
+    border-width: var(--input-border-width);
+    border-style: solid;
+    box-sizing: border-box;
+    padding: var(--input-padding-up-down) var(--input-padding-left-right) var(--input-padding-up-down) var(--input-padding-left-right);
+}
+
+.join-row input:focus, .join-content select:focus {
+    border-color: var(--title-font-color);
 }
 
 #main__title--label {
@@ -46,3 +83,40 @@ body {
     text-align: center;
 }
 
+.join-title {
+    margin-bottom: 10px;
+}
+
+.birthdate-wrapper {
+    display: flex;
+    justify-content: space-between
+}
+
+.birthdate-mm, .birthdate-dd {
+    padding-left: 10px;
+}
+
+.join-content .button-area {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 0;
+}
+
+.button-area span {
+    width: 100%;
+}
+
+.button-join {
+    padding-left: 10px;
+}
+
+.primary-button {
+    width: 100%;
+    height: 50px;
+    font-size: var(--primary-button-size);
+    font-weight: var(--primary-button-font-weight);
+    border: none;
+    cursor: pointer;
+    color: #fff;
+    background-color: #08a600;
+}
