--- a/todo_join.css
+++ b/todo_join.css
@@ -109,6 +109,10 @@
     justify-content: space-between
 }
 
+.birthdate-wrapper span {
+    width: 100%;
+}
+
 .birthdate-mm, .birthdate-dd {
     padding-left: var(--default-padding);
 }
