--- a/reset.css
+++ b/reset.css
@@ -5,9 +5,9 @@
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
+del, dfn, em, img, ins, kbd, q, s, samp, select,
 small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
+b, u, i, input, textarea, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
@@ -18,7 +18,8 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font: inherit;
+	font-size: inherit;
+	font-family: inherit;
 	vertical-align: baseline;
 }
 
