--- a/todo_join.css
+++ b/todo_join.css
@@ -41,11 +41,6 @@
     background-size: 20px 8px;
 }
 
-:root .txtarea {
-    overflow: hidden;
-    resize: none;
-}
-
 :root .underline {
     text-decoration: underline;
 }
@@ -94,7 +89,7 @@
     margin: var(--default-margin) 0 var(--default-margin) 0;
 }
 
-.join-row input, .join-content select, #interest  {
+.join-row input, .join-content select, .interest-input-wrapper {
     width: 100%;
     height: var(--input-height);
     border-color: var(--input-border-color);
@@ -104,8 +99,14 @@
     padding: var(--input-padding-up-down) var(--input-padding-left-right) var(--input-padding-up-down) var(--input-padding-left-right);
 }
 
-.join-row input:focus, .join-content select:focus, #interest:focus {
+.join-row input:focus, .join-content select:focus{
     border-color: var(--title-font-color);
+    outline: none;
+}
+
+.focus {
+    border-color: var(--title-font-color);
+    outline: none;
 }
 
 .birthdate-wrapper {
@@ -146,6 +147,36 @@
     background-color: #08a600;
 }
 
+/*
+tag 참고
+https://www.cssscript.com/tags-input-tagplug/
+*/
+.interest-input-wrapper{
+    padding: 0;
+    background: #ffffff;
+}
+
 #interest {
-    padding-top: 15px;
+    width:100%;
+    height: 100%;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    background: transparent;
+}
+
+.interest-input-wrapper .tag {
+    display: inline-block;
+    background-color: #009432;
+    color: white;
+    border-radius: 40px;
+    padding: 0px 3px 0px 7px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+}
+
+.interest-input-wrapper .tag a {
+    margin: 0 7px 3px;
+    display: inline-block;
+    cursor: pointer;
 }
