--- a/todo_join_modal.css
+++ b/todo_join_modal.css
@@ -33,7 +33,7 @@ https://gist.github.com/serranoarevalo/9f1f795e49c1ea1b020ca5af05813b0b
     padding: 10px 10px 10px 30px;
     position: relative;
     width: 40%;
-    height: 80%;
+    height: 60%;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     font-size: 1.8em;
 }
@@ -44,12 +44,17 @@ https://gist.github.com/serranoarevalo/9f1f795e49c1ea1b020ca5af05813b0b
 
 .modal__content .modal-row:nth-child(1){
     text-align: right;
+    height: 10%;
     font-weight: bold;
+}
+
+.modal__content .modal-row:nth-child(2){
+    height: 5%;
 }
 
 .modal__content .modal-row:nth-child(3){
     margin: 2rem;
-    height: 60%;
+    height: 50%;
     font-weight: 500;
     padding: 10px;
     background-color: var(--term-background-color);
@@ -59,6 +64,7 @@ https://gist.github.com/serranoarevalo/9f1f795e49c1ea1b020ca5af05813b0b
 }
 
 .modal__content .modal-row:nth-child(4){
+    height: 10%;
     text-align: center;
 }
 
@@ -76,4 +82,22 @@ https://gist.github.com/serranoarevalo/9f1f795e49c1ea1b020ca5af05813b0b
 
 .hidden{
     display: none;
+}
+
+.init__content{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+    width: 30%;
+}
+
+.init-row{
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+}
+
+.init__content .primary-button{
+    width: 150px;
 }
