--- a/todo_join_modal.css
+++ b/todo_join_modal.css
@@ -107,3 +107,12 @@ https://gist.github.com/serranoarevalo/9f1f795e49c1ea1b020ca5af05813b0b
     flex-direction: column;
     justify-content: space-evenly;
 }
+
+.join__content .init-row{
+    display: flex;
+    flex-direction: column;
+}
+
+.join__content .init-row div{
+    margin-top: 10px;
+}
