--- a/reset.css
+++ b/reset.css
@@ -25,9 +25,14 @@ time, mark, audio, video {
 
 /* default html setting */
 html {
-    font-size: 10px;
-    font-family: var(--body-font-family);
-    background-color: var(--body-background-color); 
+	font-size: 10px;
+	font-family: 'Noto Sans KR', sans-serif;
+}
+
+html, body {
+	width: 100%;
+	height: 100%;
+	background-color: #F5F6F7 !important; 
 }
 
 /* HTML5 display-role reset for older browsers */
