login box focus color 초록색으로 수정

--- a/todo_login.css
+++ b/todo_login.css
@@ -20,6 +20,11 @@
   font-size: 1.5rem;
 }
 
+.input-group input:focus{
+  border-color: #08A600;
+  box-shadow: none;
+}
+
 #login-button{
   font-size: 1.5rem;
 }
