Add comment to userTable and sessionTable

--- a/todo_web/views/todo_join.pug
+++ b/todo_web/views/todo_join.pug
@@ -27,7 +27,7 @@ section
         .join-row
           h3.join-title
             | 비밀번호 재확인
-          input#password-reconfirm(name='password-reconfirm' type='password' maxlength='16' aria-label='Password-reconfirm')
+          input#password-reconfirm(type='password' maxlength='16' aria-label='Password-reconfirm')
           span#password-reconfirm-message(style='display: none;')
         .join-row
           h3.join-title
