--- a/todo_web/views/todo_login.pug
+++ b/todo_web/views/todo_login.pug
@@ -22,6 +22,13 @@ head
         #button-area.input-row
           button#login-button.primary-button.btn.btn-success(aria-label='Login')
             | 로그인
+          if valid === 'false'
+            span#login-message.message.fail
+              | 아이디 또는 비밀번호가 정확하지 않습니다.
+          else
+            span#login-message.message.fail(style='visibility: hidden;') 
+              | 아이디 또는 비밀번호가 정확하지 않습니다.
+            
   footer
 // under bootstrap js
 script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous')
