--- a/todo_web/views/todo_join.pug
+++ b/todo_web/views/todo_join.pug
@@ -84,7 +84,7 @@ section
           span#interest-message.message.fail(style='display: none;') 3개 이상의 관심사를 입력하세요.
         .term-area
           span.join-title.underline(aria-label='Open-term')
-            | 약관에 동의합니다.
+            | 약관에 동의합니닷.
           span.term-box
             input#term-box__checkbox(type='checkbox' name='term' disabled='')
         .button-area
