--- a/views/index.pug
+++ b/views/index.pug
@@ -18,5 +18,8 @@ html
         else
           #title 로그인해주세요
           #content
-            a(href="/users/new") 회원가입
+            a#test(href="/users/new") 회원가입
             a(href="/sessions/new") 로그인
+
+
+script(src='/javascripts/todo_router.js')
